--- a/src/HN.Bangumi.Uwp.17763/Views/CalendarView.xaml
+++ b/src/HN.Bangumi.Uwp.17763/Views/CalendarView.xaml
@@ -1,18 +1,16 @@
 ﻿<Page x:Class="HN.Bangumi.Uwp.Views.CalendarView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:animations="using:Microsoft.Toolkit.Uwp.UI.Animations"
       xmlns:controls="using:HN.Bangumi.Uwp.Controls"
       xmlns:core="using:Microsoft.Xaml.Interactions.Core"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:models="using:HN.Bangumi.API.Models"
-      x:Name="Root"
       DataContext="{Binding Source={StaticResource Locator}, Path=Calendar}"
       NavigationCacheMode="Enabled"
       mc:Ignorable="d">
-    <Grid>
+    <Grid x:Name="RootGrid">
         <Pivot ItemsSource="{Binding Path=Calendar}">
             <Pivot.HeaderTemplate>
                 <DataTemplate x:DataType="models:Calendar">
@@ -22,13 +20,13 @@
             <Pivot.ItemTemplate>
                 <DataTemplate>
                     <PivotItem>
-                        <GridView animations:ReorderGridAnimation.Duration="250"
-                                  IsItemClickEnabled="True"
+                        <GridView IsItemClickEnabled="True"
                                   ItemClick="SubjectGridView_ItemClick"
-                                  ItemsSource="{Binding Path=Items}">
+                                  ItemsSource="{Binding Path=Items}"
+                                  Loaded="SubjectGridView_Loaded">
                             <interactivity:Interaction.Behaviors>
                                 <core:EventTriggerBehavior EventName="ItemClick">
-                                    <core:InvokeCommandAction Command="{Binding ElementName=Root, Path=DataContext.ItemClickCommand}"
+                                    <core:InvokeCommandAction Command="{Binding ElementName=RootGrid, Path=DataContext.ItemClickCommand}"
                                                               InputConverter="{StaticResource ItemClickEventArgsConverter}" />
                                 </core:EventTriggerBehavior>
                             </interactivity:Interaction.Behaviors>
@@ -37,12 +35,6 @@
                                     <controls:SubjectItem />
                                 </DataTemplate>
                             </ItemsControl.ItemTemplate>
-                            <ItemsControl.ItemContainerStyle>
-                                <Style TargetType="SelectorItem">
-                                    <Setter Property="Margin"
-                                            Value="0,0,12,12" />
-                                </Style>
-                            </ItemsControl.ItemContainerStyle>
                         </GridView>
                     </PivotItem>
                 </DataTemplate>
