--- a/src/HN.Bangumi.Uwp.17763/Views/ProgressView.xaml
+++ b/src/HN.Bangumi.Uwp.17763/Views/ProgressView.xaml
@@ -8,10 +8,10 @@
       xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       DataContext="{Binding Source={StaticResource Locator}, Path=Progress}"
+      NavigationCacheMode="Enabled"
       mc:Ignorable="d">
     <Grid>
-        <GridView Padding="12,12,0,0"
-                  animations:ReorderGridAnimation.Duration="250"
+        <GridView Loaded="SubjectGridView_Loaded"
                   IsItemClickEnabled="True"
                   ItemClick="SubjectGridView_ItemClick"
                   ItemsSource="{Binding Path=Collection}">
@@ -23,22 +23,19 @@
             </interactivity:Interaction.Behaviors>
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
-                    <Grid>
+                    <Grid Background="White">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="*" />
                             <RowDefinition Height="Auto" />
                         </Grid.RowDefinitions>
                         <controls:SubjectItem Grid.Row="0"
                                               DataContext="{Binding Path=Subject}" />
+                        <controls:EpProgressControl Grid.Row="1"
+                                                    Current="{Binding Path=EpStatus}"
+                                                    Total="{Binding Path=Subject.EpsCount}" />
                     </Grid>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
-            <ItemsControl.ItemContainerStyle>
-                <Style TargetType="SelectorItem">
-                    <Setter Property="Margin"
-                            Value="0,0,12,12" />
-                </Style>
-            </ItemsControl.ItemContainerStyle>
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
                     <ItemsWrapGrid HorizontalAlignment="Center"
